# keyboard-mouse-kt

./: .gitattributes  .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  gradle.properties  index.html  settings.gradle.kts  sitemap.xml
.github/workflows/: build.yml  docker.yml  docs.yml  github-ci.yml  publish.yml
common/: build.gradle.kts
common/src/commonMain/kotlin/com.github.animeshz.globalhooks/: ExperimentalAnnotations.kt
composite-build-src/: build.gradle.kts
contributing/: index.html
docker/: Dockerfile
docker/cross-build/linux-x64/: Dockerfile
docker/cross-build/linux-x86/: Dockerfile
docker/cross-build/windows-x64/: Dockerfile
docker/cross-build/windows-x86/: Dockerfile
docker/js-build/windows-x64/: Dockerfile
docker/jvm-build/: build.bat  build.sh
docker/jvm-build/linux-x64/: Dockerfile
docker/jvm-build/linux-x86/: Dockerfile
docker/jvm-build/windows-x64/: Dockerfile
docker/jvm-build/windows-x86/: Dockerfile
docs/: getting_started.ipynb  mkdocs.yml
docs/docs/: contributing.md  index.md  status-and-installation.md
docs/docs/keyboard/: high-level-api.md  key.md  low-level-api.md
gradle/wrapper/: gradle-wrapper.properties
integration/keyboard-kt-jdk8/: USAGE.md  build.gradle.kts
integration/keyboard-mouse-kt-coroutines/: build.gradle.kts
keyboard/: build.gradle.kts
keyboard-kt/: USAGE.md  build.gradle.kts
keyboard-kt/src/commonMain/kotlin/com/github/animeshz/keyboard/: Keyboard.kt  (+1 more)
keyboard-kt/src/jsMain/: package.template.json
keyboard-kt/src/jsMain/cpp/linux/: CMakeLists.txt  JsKeyboardHandler.cpp  binding.gyp
keyboard-kt/src/jsMain/cpp/windows/: CMakeLists.txt  JsKeyboardHandler.cpp  binding.gyp
keyboard-kt/src/jsMain/cpp/windows-x64/: binding.gyp
keyboard-kt/src/jsMain/napi/: JsKeyboardHandler.cpp
keyboard-kt/src/jvmMain/cpp/linux/: CMakeLists.txt  JvmKeyboardHandler.cpp
keyboard-kt/src/jvmMain/cpp/windows/: CMakeLists.txt  JvmKeyboardHandler.cpp
keyboard-kt/src/jvmMain/jni/linux/: CMakeLists.txt  JvmKeyboardHandler.cpp
keyboard-kt/src/jvmMain/jni/linux-x64/: BaseKeyboardHandler.h  CMakeLists.txt  JvmKeyboardHandler.cpp  X11KeyboardHandler.cpp
keyboard-kt/src/jvmMain/jni/linux-x86/: CMakeLists.txt  X11KeyboardHandler.cpp
keyboard-kt/src/jvmMain/jni/windows/: CMakeLists.txt
keyboard-kt/src/jvmMain/jni/windows-x64/: CMakeLists.txt  JvmKeyboardHandler.cpp
keyboard-kt/src/jvmMain/jni/windows-x86/: CMakeLists.txt  JvmKeyboardHandler.cpp
keyboard-kt/src/nativeCommon/: BaseKeyboardHandler.h
keyboard-kt/src/nativeCommon/linux/: LinuxKeyboardHandler.cpp  X11KeyboardHandler.cpp
keyboard-kt/src/nativeCommon/windows/: WindowsKeybaordHandler.cpp  WindowsKeyboardHandler.cpp
keyboard-mouse-kt/: build.gradle.kts
keyboard-mouse-kt/src/commonTest/kotlin/examples/: KeyboardTestTmp.kt  NativeKeyboardHandlerTestTmp.kt
keyboard-mouse-kt/src/jsMain/: package.template.json
keyboard-mouse-kt/src/jsMain/cpp/: CMakeLists.txt  KeyboardInternal.cpp
keyboard-mouse-kt/src/jsMain/cpp/linux/: CMakeLists.txt  JsKeyboardHandler.cpp
keyboard-mouse-kt/src/jsMain/cpp/windows/: CMakeLists.txt  JsKeyboardHandler.cpp  node.def
keyboard-mouse-kt/src/jvmMain/cpp/: CMakeLists.txt  KeyboardInternal.cpp
keyboard-mouse-kt/src/jvmMain/cpp/linux/: CMakeLists.txt  JvmKeyboardHandler.cpp
keyboard-mouse-kt/src/jvmMain/cpp/windows/: CMakeLists.txt  JvmKeyboardHandler.cpp
keyboard-mouse-kt/src/linuxMain/cinterop/: x11.def
keyboard-mouse-kt/src/nativeCommon/: BaseKeyboardHandler.h  KeyboardMouseInternal.hpp
keyboard-mouse-kt/src/nativeCommon/linux/: Keyboard.cpp  X11Keyboard.cpp  X11KeyboardHandler.cpp
keyboard-mouse-kt/src/nativeCommon/windows/: Keyboard.cpp
keyboard-mouse-kt/src/nativeMain/cinterop/: exports.cpp  exports.h  native.def
keyboard/high-level-api/: index.html
keyboard/key/: index.html
keyboard/low-level-api/: index.html
keyboard/src/commonMain/kotlin/com.github.animeshz.globalhooks/keyboard/: ExperimentalAnnotations.kt  Keyboard.kt
keyboard/src/commonMain/kotlin/com.github.animeshz.globalhooks/keyboard/entity/: Key.kt  KeySet.kt
keyboard/src/commonMain/kotlin/com.github.animeshz.globalhooks/keyboard/events/: KeyEvent.kt
keyboard/src/commonMain/kotlin/com.github.animeshz.globalhooks/keyboard/internal/: NativeKeyboardHandler.kt
keyboard/src/commonTest/kotlin/examples/: KeyboardTestTmp.kt  NativeKeyboardHandlerTestTmp.kt
keyboard/src/jvmMain/jni/: generate_cross_file.py  meson.build  meson_options.txt
keyboard/src/jvmMain/jni/linux/: CMakeLists.txt  Test.cpp  build.txt
keyboard/src/jvmMain/jni/linux-x64/: BaseKeyboardHandler.h  CMakeLists.txt  JvmKeyboardHandler.cpp  X11KeyboardHandler.cpp
keyboard/src/jvmMain/jni/linux-x86/: BaseKeyboardHandler.h  CMakeLists.txt  JvmKeyboardHandler.cpp
keyboard/src/jvmMain/jni/windows/: CMakeLists.txt  build.txt
keyboard/src/jvmMain/jni/windows-x64/: CMakeLists.txt  JvmKeyboardHandler.cpp
keyboard/src/jvmMain/jni/windows-x86/: CMakeLists.txt
keyboard/src/linuxX64Main/cinterop/: device.def  struct.def  x11.def
keyboard/src/linuxX64Main/kotlin/com.github.animeshz.globalhooks/keyboard/internal/: LinuxKeyboardHandler.kt
keyboard/src/mingwX64Main/kotlin/com.github.animeshz.globalhooks/keyboard/internal/: WindowsKeyboardHandler.kt
mouse/: build.gradle.kts
mouse-kt/: build.gradle.kts
mouse-kt/src/commonMain/kotlin/: Mouse.kt
search/: search_index.json
src/commonMain/kotlin/com.github.animeshz.globalhooks/: ExperimentalAnnotations.kt
src/commonMain/kotlin/com.github.animeshz.globalhooks/keyboard/: Keyboard.kt
src/commonMain/kotlin/com.github.animeshz.globalhooks/keyboard/entity/: Key.kt  KeySet.kt
src/commonMain/kotlin/com.github.animeshz.globalhooks/keyboard/events/: KeyEvent.kt
src/commonMain/kotlin/com.github.animeshz.globalhooks/keyboard/internal/: KBEventEmitter.kt
src/linuxX64Main/kotlin/com.github.animeshz.globalhooks/keyboard/internal/: KBEventEmitter.kt
src/mingwX64Main/kotlin/com.github.animeshz.globalhooks/keyboard/internal/: KBEventEmitter.kt
status-and-installation/: index.html
(+108 files in other folders)
